2013-01-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* after release changes

2013-01-21  Hendrik Tews <prooftree@askra.de>

	* release version 0.11 on 2013-01-21 16:43:11 UTC

2013-01-21  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2013-01-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* misc changes towards release

2013-01-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* implement proof script insertion

2013-01-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* implement undo
	* have a separate context menu
	* add headings in help window

2013-01-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* add scrollbar to evar table
	* add keybindings to evar window
	* add default number of lines of evar window to config
	  record, but stay at config file version 04

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix embarrassing evar positioning bug

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try ocamlfind in configure for lablgtk2
	* fix ocamldoc warnings

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* write ocamldoc comments

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* delete newlines in short proof commands

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* center layers

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* warning for more than one initial goal

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* integrate new config values in configuration dialog

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* support Grab Existential Variables
	* display several layers with several proof trees each
	* protocol change, but stay at version 3
	* new config file version 04

2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* differentiate proof complete message according to
	  extistential status

2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* doc fixes

2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix paragraphs in help window